--- a/template/about.html
+++ b/template/about.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css" >
-  <link rel="stylesheet" href="static/css/me.css" th:href="@{/css/me.scc}" >
+  <link rel="stylesheet" href="../static/css/me.css" th:href="@{/css/me.scc}" >
 
 </head>
 <body>
@@ -67,7 +67,7 @@
           <a href="#" class="ui circular icon button"><i class="amazon icon"></i></a>
         </div>
         <div class="ui wechat-qr flowing popup transition hidden">
-          <img src="static/images/wechat.png" alt="" class="ui rounded image" style="width: 100px">
+          <img src="../static/images/wechat.png" alt="" class="ui rounded image" style="width: 100px">
         </div>
       </div>
     </div>
@@ -89,7 +89,7 @@
       <div class="three wide column">
         <div class="ui inverted link list">
           <div class="item">
-            <img src="static/images/icon.png" th:src="@{/images/icon.png}" class="ui rounded image" alt="" style="width: 110px">
+            <img src="../static/images/icon.png" th:src="@{/images/icon.png}" class="ui rounded image" alt="" style="width: 110px">
           </div>
         </div>
       </div>
