--- a/template/blog.html
+++ b/template/blog.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css" >
-  <link rel="stylesheet" href="static/css/typo.css" th:href="@{/css/type.scc}" >
-  <link rel="stylesheet" href="static/css/animate.css" th:href="@{/css/animate.scc}" >
-  <link rel="stylesheet" href="static/lib/prism/prism.css">
-  <link rel="stylesheet" href="static/lib/tocbot/tocbot.css">
-  <link rel="stylesheet" href="static/css/me.css" th:href="@{/css/me.scc}" >
+  <link rel="stylesheet" href="../static/css/typo.css" th:href="@{/css/type.scc}" >
+  <link rel="stylesheet" href="../static/css/animate.css" th:href="@{/css/animate.scc}" >
+  <link rel="stylesheet" href="../static/lib/prism/prism.css">
+  <link rel="stylesheet" href="../static/lib/tocbot/tocbot.css">
+  <link rel="stylesheet" href="../static/css/me.css" th:href="@{/css/me.scc}" >
 
 </head>
 <body>
@@ -42,7 +42,7 @@
     <div class="ui top attached segment">
       <div class="ui horizontal link list">
         <div class="item">
-          <img src="static/images/icon.png" alt="" class="ui avatar image">
+          <img src="../static/images/icon.png" alt="" class="ui avatar image">
         </div>
         <div class="item">
           <div class="content">
@@ -445,15 +445,15 @@ h5,h6{font-size:1em;}
         <div class="ui orange basic label">
           <div class="ui images" style="font-size: inherit !important;">
             <div class="image">
-              <img src="static/images/amazon.png" alt="" class="ui rounded bordered image" style="width: 120px">
+              <img src="../static/images/amazon.png" alt="" class="ui rounded bordered image" style="width: 120px">
               <div>Amazon</div>
             </div>
             <div class="image">
-              <img src="static/images/google.png" alt="" class="ui rounded bordered image" style="width: 120px">
+              <img src="../static/images/google.png" alt="" class="ui rounded bordered image" style="width: 120px">
               <div>Google</div>
             </div>
             <div class="image">
-              <img src="static/images/wechat.png" alt="" class="ui rounded bordered image" style="width: 120px">
+              <img src="../static/images/wechat.png" alt="" class="ui rounded bordered image" style="width: 120px">
               <div>Wechat</div>
             </div>
           </div>
@@ -473,7 +473,7 @@ h5,h6{font-size:1em;}
           </ui>
         </div>
         <div class="five wide column">
-          <img src="static/images/icon.png" alt="" class="ui right floated rounded bordered image" style="width: 110px;">
+          <img src="../static/images/icon.png" alt="" class="ui right floated rounded bordered image" style="width: 110px;">
         </div>
       </div>
     </div>
@@ -484,7 +484,7 @@ h5,h6{font-size:1em;}
           <h3 class="ui dividing header">Comments</h3>
           <div class="comment">
             <a class="avatar">
-              <img src="static/images/icon.png">
+              <img src="../static/images/icon.png">
             </a>
             <div class="content">
               <a class="author">Matt</a>
@@ -501,7 +501,7 @@ h5,h6{font-size:1em;}
           </div>
           <div class="comment">
             <a class="avatar">
-              <img src="static/images/icon.png">
+              <img src="../static/images/icon.png">
             </a>
             <div class="content">
               <a class="author">Elliot Fu</a>
@@ -518,7 +518,7 @@ h5,h6{font-size:1em;}
             <div class="comments">
               <div class="comment">
                 <a class="avatar">
-                  <img src="static/images/icon.png">
+                  <img src="../static/images/icon.png">
                 </a>
                 <div class="content">
                   <a class="author">Jenny Hess</a>
@@ -537,7 +537,7 @@ h5,h6{font-size:1em;}
           </div>
           <div class="comment">
             <a class="avatar">
-              <img src="static/images/icon.png">
+              <img src="../static/images/icon.png">
             </a>
             <div class="content">
               <a class="author">Joe Henderson</a>
@@ -615,7 +615,7 @@ h5,h6{font-size:1em;}
       <div class="three wide column">
         <div class="ui inverted link list">
           <div class="item">
-            <img src="static/images/icon.png" th:src="@{/images/icon.png}" class="ui rounded image" alt="" style="width: 110px">
+            <img src="../static/images/icon.png" th:src="@{/images/icon.png}" class="ui rounded image" alt="" style="width: 110px">
           </div>
         </div>
       </div>
@@ -649,10 +649,10 @@ h5,h6{font-size:1em;}
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
 
-<script src="static/lib/prism/prism.js"></script>
-<script src="static/lib/tocbot/tocbot.min.js"></script>
-<script src="static/lib/qrcode/qrcode.min.js"></script>
-<script src="static/lib/waypoint/jquery.waypoints.js"></script>
+<script src="../static/lib/prism/prism.js"></script>
+<script src="../static/lib/tocbot/tocbot.min.js"></script>
+<script src="../static/lib/qrcode/qrcode.min.js"></script>
+<script src="../static/lib/waypoint/jquery.waypoints.js"></script>
 <script src="//cdn.jsdelivr.net/npm/jquery.scrollto@2.1.2/jquery.scrollTo.min.js"></script>
 
 <script>
