--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Home</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css" >
-  <link rel="stylesheet" href="static/css/me.css" th:href="@{/css/me.scc}" >
+  <link rel="stylesheet" href="../static/css/me.css" th:href="@{/css/me.scc}" >
 
 </head>
 <body>
@@ -60,7 +60,7 @@
                   <div class="eleven wide column">
                     <div class="ui mini horizontal link list">
                       <div class="item">
-                        <img src="static/images/icon.png" alt="" class="ui avatar image">
+                        <img src="../static/images/icon.png" alt="" class="ui avatar image">
                       </div>
                       <div class="item">
                         <div class="content">
@@ -98,7 +98,7 @@
                   <div class="eleven wide column">
                     <div class="ui mini horizontal link list">
                       <div class="item">
-                        <img src="static/images/icon.png" alt="" class="ui avatar image">
+                        <img src="../static/images/icon.png" alt="" class="ui avatar image">
                       </div>
                       <div class="item">
                         <div class="content">
@@ -136,7 +136,7 @@
                 <div class="eleven wide column">
                   <div class="ui mini horizontal link list">
                     <div class="item">
-                      <img src="static/images/icon.png" alt="" class="ui avatar image">
+                      <img src="../static/images/icon.png" alt="" class="ui avatar image">
                     </div>
                     <div class="item">
                       <div class="content">
@@ -174,7 +174,7 @@
                 <div class="eleven wide column">
                   <div class="ui mini horizontal link list">
                     <div class="item">
-                      <img src="static/images/icon.png" alt="" class="ui avatar image">
+                      <img src="../static/images/icon.png" alt="" class="ui avatar image">
                     </div>
                     <div class="item">
                       <div class="content">
@@ -320,7 +320,7 @@
         <!-- QRcode -->
         <h4 class="ui horizontal divider header"> Check out my website </h4>
         <div class="ui centered card" style="width: 11em">
-          <img src="static/images/icon.png" th:src="@{/images/icon.png}" alt="" class="ui rounded image" >
+          <img src="../static/images/icon.png" th:src="@{/images/icon.png}" alt="" class="ui rounded image" >
         </div>
       </div>
     </div>
@@ -341,7 +341,7 @@
       <div class="three wide column">
         <div class="ui inverted link list">
           <div class="item">
-            <img src="static/images/icon.png" th:src="@{/images/icon.png}" class="ui rounded image" alt="" style="width: 110px">
+            <img src="../static/images/icon.png" th:src="@{/images/icon.png}" class="ui rounded image" alt="" style="width: 110px">
           </div>
         </div>
       </div>
