--- a/template/about.html
+++ b/template/about.html
@@ -37,7 +37,8 @@
     <div class="ui stackable grid">
       <div class="eleven wide column">
         <div class="ui segment">
-          <img src="https://picsum.photos/id/1049/800/600" alt="" class="ui rounded image">
+<!--          <img src="https://picsum.photos/id/1049/800/600" alt="" class="ui rounded image">-->
+          <img src="../static/images/unname2.png" alt="" class="ui rounded image">
         </div>
       </div>
       <div class="five wide column">
@@ -47,6 +48,8 @@
         <div class="ui attached segment">
           <p class="m-text">开会那么严肃的时候，每个人都在被骂每个人都在接受意见的时候，我要笑吗？我是你哥哥，好吧</p>
           <p class="m-text">“说中痛处就气急败坏，其实还是一条懒狗”，哎，好好好好好好好，你觉得是那就是，不狡辩</p>
+<!--          <p class="m-text">我和我的猫都很想你，其实我没有猫，也没有你～～</p>-->
+
         </div>
         <div class="ui attached segment">
           <div class="ui orange basic left pointing label m-margin-tb-tiny">嘴臭</div>
@@ -67,7 +70,8 @@
           <a href="#" class="ui circular icon button"><i class="amazon icon"></i></a>
         </div>
         <div class="ui wechat-qr flowing popup transition hidden">
-          <img src="../static/images/wechat.png" alt="" class="ui rounded image" style="width: 100px">
+<!--          <img src="../static/images/wechat.png" alt="" class="ui rounded image" style="width: 100px">-->
+          <img src="../static/images/icon2.png" alt="" class="ui rounded image" style="width: 100px">
         </div>
       </div>
     </div>
