--- a/template/admin/blogs-input.html
+++ b/template/admin/blogs-input.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog Input</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.css" >
-  <link rel="stylesheet" href="../static/lib/editormd/css/editormd.min.css">
-  <link rel="stylesheet" href="../static/css/me.css" th:href="@{/css/me.scc}" >
+  <link rel="stylesheet" href="../../static/lib/editormd/css/editormd.min.css">
+  <link rel="stylesheet" href="../../static/css/me.css" th:href="@{/css/me.scc}" >
 
 </head>
 <body>
@@ -20,7 +20,7 @@
       <div class="right m-item m-mobile-hide menu">
         <div class="ui dropdown item">
           <div class="text">
-            <img src="../static/images/icon.png" alt="" class="ui avatar image">
+            <img src="../../static/images/icon.png" alt="" class="ui avatar image">
             Ken Adams
           </div>
           <i class="dropdown icon"></i>
@@ -180,7 +180,7 @@
       <div class="three wide column">
         <div class="ui inverted link list">
           <div class="item">
-            <img src="../static/images/icon.png" th:src="@{/images/icon.png}"  class="ui rounded image" alt="" style="width: 110px">
+            <img src="../../static/images/icon.png" th:src="@{/images/icon.png}" class="ui rounded image" alt="" style="width: 110px">
           </div>
         </div>
       </div>
@@ -213,7 +213,7 @@
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.2/dist/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/semantic-ui/2.2.4/semantic.min.js"></script>
-<script src="../static/lib/editormd/editormd.min.js"></script>
+<script src="../../static/lib/editormd/editormd.min.js"></script>
 
 <script>
 
