--- a/template/admin/blogs-input.html
+++ b/template/admin/blogs-input.html
@@ -225,7 +225,7 @@
             height  : 640,
             syncScrolling : "single",
 //        path    : "../static/lib/editormd/lib/"
-            path    : "../static/lib/editormd/lib/"
+            path    : "../../static/lib/editormd/lib/"
         });
     });
 
